syntax = "proto3";

import "google/protobuf/empty.proto";

package grpc.user.v1;

message HealthCheckRequest { string service = 1; }

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3; // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
  rpc check(HealthCheckRequest) returns (HealthCheckResponse);

  rpc watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

service UserService {

  rpc createUser(CreateUserRequest) returns (UserModel);

  rpc deleteUser(QueryUserByIdRequest) returns (google.protobuf.Empty);

  rpc updateUser(UpdateUserRequest) returns (google.protobuf.Empty);

  rpc getUserByAccessKey(QueryUserByAccessKeyRequest) returns (UserModel);
  rpc getUserByName(QueryUserByNameRequest) returns (UserModel);
  rpc getUserById(QueryUserByIdRequest) returns (UserModel);
  rpc getUserModelList(google.protobuf.Empty) returns (UserModelList);
}

enum UserStatusEnum {
  DISABLE = 0;
  ENABLE = 1;
}

enum UserRolesEnum {
  ADMIN = 0;
  USER = 1;
}

message UserModel {
  string id = 1;
  string username = 2;
  string avatar = 3;
  string password = 4;
  UserStatusEnum status = 5;
  UserRolesEnum role = 6;
  string accessKey = 7;
  string secretKey = 8;
  double createdAt = 9;
  double updatedAt = 10;
}

message UserModelList { repeated UserModel results = 1; }

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message UpdateUserRequest {
  string id = 1;
  optional string avatar = 2;
  optional string password = 3;
  optional UserStatusEnum status = 4;
  optional UserRolesEnum role = 5;
  optional string accessKey = 6;
  optional string secretKey = 7;
}

message QueryUserByIdRequest { string id = 1; }

message QueryUserByNameRequest { string username = 1; }

message QueryUserByAccessKeyRequest { string accessKey = 1; }